--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.5",
+    "expo": "~51.0.6",
     "expo-background-fetch": "~12.0.1",
     "expo-constants": "~16.0.1",
     "expo-device": "~6.0.2",
@@ -19,7 +19,8 @@
     "react-native": "0.74.1",
     "react-native-paper": "^5.12.3",
     "react-native-push-notification": "^8.1.1",
-    "react-native-sound": "^0.11.2"
+    "react-native-sound": "^0.11.2",
+    "react-native-safe-area-context": "4.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
