--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "tan-ma",
-    "slug": "tan-ma",
+    "name": "tan-ma-1",
+    "slug": "tan-ma-1",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -29,9 +29,8 @@
     },
     "extra": {
       "eas": {
-        "projectId": "31372344-635d-415b-b9e8-fcbd0715ccfc"
+        "projectId": "ca044123-617f-413c-a822-56894e0463e3"
       }
-    },
-    "owner": "anass-nb1"
+    }
   }
 }
