--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.6",
-    "expo-background-fetch": "~12.0.1",
-    "expo-constants": "~16.0.1",
-    "expo-device": "~6.0.2",
-    "expo-notifications": "~0.28.1",
-    "expo-status-bar": "~1.12.1",
+    "expo": "~50.0.17",
+    "expo-background-fetch": "~11.8.1",
+    "expo-constants": "~15.4.6",
+    "expo-device": "~5.9.4",
+    "expo-notifications": "~0.27.7",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.73.6",
     "react-native-paper": "^5.12.3",
     "react-native-push-notification": "^8.1.1",
-    "react-native-sound": "^0.11.2",
-    "react-native-safe-area-context": "4.10.1"
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-sound": "^0.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
