--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-native-paper": "^5.12.3",
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-sound": "^0.11.2"
+    "react-native-sound": "^0.11.2",
+    "expo-dev-client": "~3.3.11",
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
